Replaced event output with simple console. Fixed touchData bug on iOS

--- a/assets/styles/master.scss
+++ b/assets/styles/master.scss
@@ -218,7 +218,7 @@ html {
 				transform:       translateX(-50%);
 			}
 
-.event_details {
+.console {
 	position: absolute;
 	bottom: 0;
 	left: 0;
